--- a/templates/etc/nginx/sites-available/dashboard-ssl.conf.j2
+++ b/templates/etc/nginx/sites-available/dashboard-ssl.conf.j2
@@ -8,7 +8,7 @@ upstream archivematica_dashboard_backend {
 
 server {
 
-  listen 80;
+  listen 80 default_server;
   server_name _;
     {% if archivematica_src_syslog_enabled|bool %}
     error_log syslog:server={{ archivematica_src_syslog_server }},tag=dashboard info;
@@ -24,16 +24,14 @@ server {
 {% endif %}
 
   # redirect to https
-  location / {
-    return 301 https://$host$request_uri;
-  }
+  return 301 https://$host$request_uri;
 
 }
 
 server {
 
   listen 443 ssl;
-  server_name _;
+  server_name am.lib.fsu.edu;
 
   ssl_certificate  {{ archivematica_src_ssl_fullchain }};
   ssl_certificate_key {{ archivematica_src_ssl_privkey }};
@@ -41,9 +39,10 @@ server {
   ssl_session_timeout 1d;
   ssl_session_cache shared:SSL:50m;
 
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-  ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384; 
   ssl_prefer_server_ciphers on;
+  ssl_dhparam /etc/dhparam.2048;
 
   ssl_stapling on;
   ssl_stapling_verify on;
